[package]
name = "structured-merge-diff"
version = "6.3.0"
edition = "2021"
description = "A Rust implementation of structured merge and diff operations for Kubernetes"
license = "Apache-2.0"
repository = "https://github.com/kubernetes-sigs/structured-merge-diff"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
once_cell = "1.19"

[dev-dependencies]
pretty_assertions = "1.4"
