[package]
name = "structured-merge-diff"
version = "6.3.0"
edition = "2021"
description = "A Rust implementation of structured merge and diff operations for Kubernetes"
license = "Apache-2.0"
repository = "https://github.com/kubernetes-sigs/structured-merge-diff"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9"
thiserror = "1.0.49"
once_cell = "1.19.0"

[dev-dependencies]

[[bin]]
name = "smd"
path = "src/bin/smd.rs"
